	    nsh> echo "This is a test" > /dev/fifo

	  The error was caused because (1) there was a path that resulted in stdout
	  being closed (the "hang") and also (2) the 'cat' command was always outputting
	  to stdout, not to the redirected file descriptor.  Now:

	    nsh> cat test.txt
	    This is a test

	* drivers/pipes/pipe_common.c:  Driver open method eas not returning an EINTR
	  error when it received a signal.  Instead, it just re-started the wait.  This
	  makes it impossible to kill a background pipe operation from NSH.
	* include/stdint.h -- Correct some errors in conditional compilation (submitted
	  by Johannes Hampel).
	* arch/arm/lpc17xx/lp17_idle.c -- Uses the same logic as the STM32: uses the
	  WFI instruction to sleep in a reduced power mode until the next interrupt
	  occurs.
	* configs/olimex-lpc1766stk -- Added an LED encoded to indicate if the LPC1766
	  is in sleeping.
	* examples/mm  -- This is a simplified version of the "built-in" memory manager
	  test of mm/mm_test.c.  It is simplified because it does not have access to
	  the internals of the memory manager as does mm/mm_test.c, but it has the
	  advantage that it runs in the actual NuttX tasking environment (the
	  mm/mm_test.c only runs in a PC simulation environment).
	* drivers/mmcsd_sdio.c/h -- Several corrections submitted by Uros Platise.
	* arch/x86 - Provide support for x86 architectures.  Support for the i486
	  architecture under QEMU is provided under arch/x86/include/i486,
	  arch/x86/include/qemu, arch/x86/src/i486, and arch/x86/src/qemu.
	* configs/qemu-i486 - "Board" support configurations for verifying the QEME
	  i486 port.
	* arch/arm/src/stm32/stm32_spi.c -- Correct base address of SPI3 (reported by
	  Uros Platise).
	* drivers/mmcsd/mmcsd_sdio.c -- Correct a loop termination condition (also
	  reported by Uros Platise).
	* drivers/mtd/ramtron.c -  Driver for SPI-based RAMTRON NVRAM devices FM25V10
	  (and others).  Contributed by Uros Platise.